--- a/css/memo.css
+++ b/css/memo.css
@@ -1,5 +1,6 @@
 h1{
-  float-left:50%;
+  text-align: center;
+  font-family: 'Lobster Two', cursive;
 }
 
 .first{
@@ -41,3 +42,7 @@ h1{
   backface-visibility: hidden;
   background-image: url(../assets/lol.gif);
 }
+ img.resize{
+    width: 140px;
+    height: 170px;
+ }
