--- a/css/memo.css
+++ b/css/memo.css
@@ -1,6 +1,8 @@
 h1{
   text-align: center;
   font-family: 'Lobster Two', cursive;
+  height: 40px;
+  padding: 30px 10px 30px 10px;
 }
 
 .first{
@@ -31,7 +33,7 @@ h1{
 .front{
   border-radius: 5px;
   width: 140px;
-	background-color: lightpink;
+  background-color: lightpink;
   backface-visibility: hidden;  
   transform: rotateY(180deg);
 
